Fix default scaling factor setting to 0.

The value 0 means 'fit to window' wherease old '100' meant 1:1.
With the old value, when scaling slider was hidden, Scale button
had no effect. The new value restores old behaviour when there
was no slider and Scale button was fitting remote to window.

BUG: 441497
(cherry picked from commit 662c47d480f48aa48b486c4db31ee3c95b899248)